<resources>
    <string name="app_name">Whatsapp</string>
    <string name="whatsapp_title">Whatsapp</string>
    <string name="message_hint">message</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="unregisteredText">Unregistered? click here to sign up</string>
    <string name="loginBtn">Login</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="display_name_text">Display Name</string>
    <string name="picture_text">picture</string>
    <string name="checkbox">I\'m not a robot</string>
    <string name="AlreadyRegisteredText">Already registered? click here to login</string>
    <string name="signUp">Sign Up</string>
    <string name="home_navMessage">Home</string>
    <string name="login_navMessage">Login</string>
    <string name="messages_navMessage">Messages</string>
    <string name="settings_navMessage">Settings</string>
    <string name="logout_navMessage">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_navChats">Chats</string>
    <string name="register_navMessage">Register</string>
    <string name="danger_category">Danger</string>
    <string name="add_text">Add</string>
    <string name="BaseUrl">http://192.168.2.107:5000/</string>
    <string name="choosePic">choose a picture from your local storage
                 (click below)</string>
    <string name="home_fragment_message">
        Welcome to the GOAT\'s Whatsapp
        now available for Android!!!

        You may press on the menu at the top left
        corner and start using our app

        We hope you will have a great time :)

    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app">App</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_contact_text">Add Contact</string>
</resources>