<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_navMessage"
            android:icon="@drawable/ic_btn_home" />

        <item
            android:id="@+id/nav_chats"
            android:title="@string/home_navChats"
            android:icon="@drawable/ic_btn_chats" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings_navMessage"
            android:icon="@drawable/ic_btn_settings" />



        <item android:title="@string/danger_category">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_logout"
                        android:title="@string/logout_navMessage"
                        android:icon="@drawable/ic_btn_logout" />
                </group>
            </menu>
        </item>



    </group>
</menu>