<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signing_pages_background"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.3">

        <EditText
            android:id="@+id/username"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_background"
            android:paddingLeft="10dp"
            android:inputType="text"
            android:hint="@string/usernameHint"
            android:autofillHints="username"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:hint="@string/passwordHint"
            android:background="@drawable/rounded_white_background"
            android:paddingLeft="10dp"
            android:autofillHints="password"
            android:layout_marginTop="8dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/verifyPassword"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:hint="@string/confirm_password_text"
            android:background="@drawable/rounded_white_background"
            android:paddingLeft="10dp"
            android:autofillHints="verifyPassword"
            android:layout_marginTop="8dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/displayName"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_background"
            android:paddingLeft="10dp"
            android:inputType="text"
            android:hint="@string/display_name_text"
            android:autofillHints="displayName"/>

        <TextView
            android:paddingTop="15dp"
            android:text="@string/choosePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/no_image_selected"
            android:onClick="selectImage" />

        <CheckBox
            android:id="@+id/robotCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox" />


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/barGreen"
            android:textColor="@color/black"
            android:text="@string/signUp"/>
        <TextView
            android:id="@+id/registeredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/AlreadyRegisteredText" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>