<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <EditText
            android:id="@+id/username"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_background"
            android:paddingLeft="10dp"
            android:hint="@string/usernameHint"
            android:inputType="text" />


        <EditText
            android:id="@+id/password"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_background"
            android:paddingLeft="10dp"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/barColor"
            android:text="@string/loginBtn"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/unregisteredText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unregisteredText" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>